# hyena-dna

./: .gitignore  huggingface.py  img.def  pyproject.toml  requirements.txt
configs/dataset/: species.yaml
configs/experiment/hg38/: chromatin_profile.yaml  genomic_benchmark.yaml  genomic_benchmark_attention.yaml  genomic_benchmark_load_finetuned_model.yaml  genomic_benchmark_scratch.yaml  hg38.yaml  hg38_attention.yaml  hg38_fixed_test.yaml  hg38_fixed_test_attention.yaml  hg38_hyena.yaml  hg38_hyena_icl.yaml  hg38_hyena_seqlen_warmup_reload.yaml  nucleotide_transformer.yaml  species.yaml  species_attention.yaml  species_seqlen_warmup_reload.yaml
evals/: hg38_inference.py  hg38_inference_decoder.py
src/dataloaders/: genomics.py
src/dataloaders/datasets/: genomic_bench_dataset.py  hg38_char_tokenizer.py
src/models/sequence/: hyena.py  kai_layers.py  long_conv.py
src/utils/: assoc_scan.py  registry.py
